--- a/public/css/main.css
+++ b/public/css/main.css
@@ -129,7 +129,7 @@ tr td:first-child {
 }
 .show_image img:hover{
     filter: blur(5px);
-    cursor: crosshair;
+    cursor: pointer;
 }
 .show_image img:hover ~.zoom{
     opacity: 1;
@@ -185,4 +185,33 @@ tr td:first-child {
     border-top: 3px solid gray;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
+}
+
+/*Chat*/
+.newMessage {
+    background: gray;
+    width: 60%;
+    margin: 15px 15px;
+    color: white;
+    /*background: #00cc00;*/
+    padding: 10px;
+    border-radius: 5px;
+    min-height: 40px;
+    word-wrap: break-word;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.oldMessage {
+    width: 60%;
+    margin: 15px 15px;
+    color: white;
+    background: #00b300;
+    padding: 10px;
+    border-radius: 5px;
+    min-height: 40px;
+    word-wrap: break-word;
+    font-size: 18px;
+    font-weight: bold;
+    margin-left: 37%;
 }
