--- a/templates/mainpage/sidebar.html.twig
+++ b/templates/mainpage/sidebar.html.twig
@@ -8,24 +8,25 @@
         <div class="sidebar">
             <nav class="mt-2">
                 <ul class="nav nav-pills nav-sidebar flex-column" data-accordion="false" data-widget="treeview" role="menu">
+                    <!--*********************************************************-->
                     <li class="nav-item active treeview menu-open">
                         <a class="nav-link" href="#">
                             <i class="nav-icon fa fa-edit"></i>
                             <p>
-                                Posts
+                                {% trans %}Posty{% endtrans %}
                             </p>
                         </a>
                         <ul class="nav nav-treeview" style="display: block;">
                             <li class="nav-item archive">
-                                <a class="nav-link button" href="{{ path('show_posts') }}">
+                                <a class="nav-link button" href="{{ path('show_user_posts') }}">
                                     <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>Browse</p>
+                                    <p>{% trans %}Przeglądaj{% endtrans %}</p>
                                 </a>
                             </li>
                             <li class="nav-item archive">
                                 <a class="nav-link button" href="{{ path('new_post') }}">
                                     <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>New Post</p>
+                                    <p>{% trans %}Stwórz post{% endtrans %}</p>
                                 </a>
                             </li>
                         </ul>
@@ -35,14 +36,14 @@
                         <a class="nav-link" href="#">
                             <i class="nav-icon fa fa-edit"></i>
                             <p>
-                                Quests
+                                {% trans %}Zadania{% endtrans %}
                             </p>
                         </a>
                         <ul class="nav nav-treeview" style="display: block;">
                             <li class="nav-item archive">
                                 <a class="nav-link button" href="{{ path('show_user_quests', {id: app.user.Id}) }}">
                                     <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>Show Quests</p>
+                                    <p>{% trans %}Pokaż zadania{% endtrans %}</p>
                                 </a>
                             </li>
                         </ul>
@@ -59,7 +60,7 @@
                             <li class="nav-item archive">
                                 <a class="nav-link button" href="{{ path('chat') }}">
                                     <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>Show chat</p>
+                                    <p>{% trans %}Pokaż chat{% endtrans %}</p>
                                 </a>
                             </li>
                         </ul>
@@ -69,14 +70,14 @@
                         <a class="nav-link" href="#">
                             <i class="nav-icon fa fa-edit"></i>
                             <p>
-                                Account
+                                {% trans %}Konto{% endtrans %}
                             </p>
                         </a>
                         <ul class="nav nav-treeview" style="display: block;">
                             <li class="nav-item archive">
                                 <a class="nav-link button" href="{{ path('edit_user', {id: app.user.Id}) }}">
                                     <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>Account data</p>
+                                    <p>{% trans %}Dane konta{% endtrans %}</p>
                                 </a>
                             </li>
                             <li class="nav-item archive">
@@ -93,32 +94,38 @@
                             <a class="nav-link" href="#">
                                 <i class="nav-icon fa fa-edit"></i>
                                 <p>
-                                    Admin
+                                    {% trans %}Administrator{% endtrans %}
                                 </p>
                             </a>
                             <ul class="nav nav-treeview" style="display: block;">
                                 <li class="nav-item archive">
                                     <a class="nav-link button" href="{{ path('show_users') }}">
                                         <i class="fa fa-circle-o nav-icon"></i>
-                                        <p>Users list</p>
+                                        <p>{% trans %}Lista użytkowników{% endtrans %}</p>
                                     </a>
                                 </li>
                                 <li class="nav-item archive">
                                     <a class="nav-link button" href="{{ path('app_register') }}">
                                         <i class="fa fa-circle-o nav-icon"></i>
-                                        <p>Create user</p>
+                                        <p>{% trans %}Stwórz użytkownika{% endtrans %}</p>
                                     </a>
                                 </li>
                                 <li class="nav-item archive">
                                     <a class="nav-link button" href="{{ path('new_quest') }}">
                                         <i class="fa fa-circle-o nav-icon"></i>
-                                        <p>New Quest</p>
+                                        <p>{% trans %}Dodaj zadanie{% endtrans %}</p>
                                     </a>
                                 </li>
                                 <li class="nav-item archive">
                                     <a class="nav-link button" href="{{ path('show_all_quests') }}">
                                         <i class="fa fa-circle-o nav-icon"></i>
-                                        <p>Quests list</p>
+                                        <p>{% trans %}Lista zadań{% endtrans %}</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item archive">
+                                    <a class="nav-link button" href="{{ path('show_posts') }}">
+                                        <i class="fa fa-circle-o nav-icon"></i>
+                                        <p>{% trans %}Lista postów{% endtrans %}</p>
                                     </a>
                                 </li>
                             </ul>
