--- a/templates/posts/edit_post.html.twig
+++ b/templates/posts/edit_post.html.twig
@@ -1,26 +1,30 @@
 {% extends('mainpage/main.html.twig') %}
     {% block content %}
-        <h2 class="mt-3 mb-4"><span style="cursor: default;">Edit your Post</span></h2>
+        <h2 class="mt-3 mb-4"><span style="cursor: default;">{% trans %}Edytuj swój post{% endtrans %}</span></h2>
         <div class="form form_edit_post">
             <div class="row">
                 <div class="col-6">
                     <h1>Post:</h1>
                     {{ form_start(form) }}
-                    {{ form_row(form.Title) }}
-                    {{ form_row(form.Content) }}
-                    <div class="mt-3">{{ form_label(form.name) }}</div>
+                    <div class="mt-3"><span style="cursor: default; font-weight: bold;">{% trans %}Tytuł{% endtrans %}</span></div>
+                    {{ form_widget(form.Title) }}
+                    {{ form_errors(form.Title) }}
+                    <div class="mt-3"><span style="cursor: default; font-weight: bold;">{% trans %}Treść{% endtrans %}</span></div>
+                    {{ form_widget(form.Content) }}
+                    {{ form_errors(form.Content) }}
+                    <div class="mt-3"><span style="cursor: default; font-weight: bold;">{% trans %}Wybierz zdjęcie{% endtrans %}:</span></div>
                     {{ form_widget(form.name) }}
                     {{ form_errors(form.name) }}
                     <div class="col-6">
-                        <button class="btn btn-dark mt-5">Edit Post</button>
+                        <button class="btn btn-dark mt-5">{% trans %}Edytuj{% endtrans %}</button>
                         <a href="/posts">
-                            <div class="btn btn-primary mt-5 ml-2" href="/posts">Back</div>
+                            <div class="btn btn-primary mt-5 ml-2" href="/posts">{% trans %}Wróć{% endtrans %}</div>
                         </a>
                     </div>
                     {{ form_end(form) }}
                 </div>
                 <div class="col-6 pl-5">
-                    <h1>Photo:</h1>
+                    <h1>{% trans %}Zdjęcie{% endtrans %}:</h1>
                     {% if photoPath is defined %}
                         <img class="mt-3"
                              style="height: auto; width: 60%; border-radius: 5px; border: 2px solid gray; margin-bottom: 30px;"
@@ -33,7 +37,7 @@
                         </div>
                     {% else %}
                         <div style="width: 300px; height: 200px; border-radius: 5px; border: 2px solid gray; text-align: center; margin-bottom: 30px; padding-top: 70px; ">
-                            <h1>No image</h1>
+                            <h1>{% trans %}Brak zdjęcia{% endtrans %}</h1>
                         </div>
                     {% endif %}
                 </div>
