--- a/templates/posts/new_post.html.twig
+++ b/templates/posts/new_post.html.twig
@@ -1,17 +1,19 @@
 {% extends 'mainpage/main.html.twig' %}
 {% block content %}
     <div class="container-fluid container_new_post mt-5">
-
-        <h1 class="mb-5">Add new Post</h1>
-
+        <h1 class="mb-5">{% trans %}Stwórz nowy post{% endtrans %}</h1>
         {{ form_start(form) }}
-        {{ form_row(form.Title) }}
-        {{ form_row(form.Content) }}
-        <div class="mt-3">{{ form_label(form.name) }}</div>
+        <div class="mt-3"><span style="cursor: default; font-weight: bold;">{% trans %}Tytuł{% endtrans %}</span></div>
+        {{ form_widget(form.Title) }}
+        {{ form_errors(form.Title) }}
+        <div class="mt-3"><span style="cursor: default; font-weight: bold;">{% trans %}Treść{% endtrans %}</span></div>
+        {{ form_widget(form.Content) }}
+        {{ form_errors(form.Content) }}
+        <div class="mt-3"><span style="cursor: default; font-weight: bold;">{% trans %}Wybierz zdjęcie{% endtrans %}:</span></div>
         {{ form_widget(form.name) }}
         {{ form_errors(form.name) }}
         <div>
-            <button class="btn btn-dark mt-5">Add Post</button>
+            <button class="btn btn-dark mt-5">{% trans %}Dodaj post{% endtrans %}</button>
         </div>
         {{ form_end(form) }}
     </div>
