--- a/templates/posts/show_post.html.twig
+++ b/templates/posts/show_post.html.twig
@@ -5,20 +5,20 @@
             <div class="col-6">
                 <h1>Post:</h1>
                 {% if post == true %}
-                    <p style="font-weight: bold;"><h4>Date:</h4>
-                    <h6>{{ post.Date|date("F jS \\a\\t g:ia") }}</h6></p>
-                    <p><h4>Author:</h4>
+                    <p style="font-weight: bold;"><h4>{% trans %}Data{% endtrans %}:</h4>
+                    <h6>{{ post.Date|date("d.m.Y H:i") }}</h6></p>
+                    <p><h4>{% trans %}Autor{% endtrans %}:</h4>
                 <h6>{{ post.User.Login }}</h6></p>
-                    <p><h4>Title:</h4>
+                    <p><h4>{% trans %}Tytuł{% endtrans %}:</h4>
                     <h6>{{ post.Title }}</h6></p>
-                    <p><h4>Content:</h4>
+                    <p><h4>{% trans %}Treść{% endtrans %}:</h4>
                 <h6>{{ post.Content }}</h6></p>
                 {% endif %}
             </div>
             <div class="col-6">
-                <h1>Photo:</h1>
+                <h1>{% trans %}Zdjęcie{% endtrans %}:</h1>
                 {% if photoPath is defined %}
-                    <div class="show_image" data-toggle="modal" data-target="#exampleModal321">
+                    <div class="show_image" data-toggle="modal" data-target="#photoModal">
                         <img class="mt-3"
                              style="max-width: 100%; border-radius: 5px; border: 2px solid gray; margin-bottom: 30px;"
                              src="{{ asset('uploads/photos/') }}{{ photoPath }}">
@@ -26,17 +26,17 @@
                     </div>
                 {% else %}
                     <div style="width: 300px; height: 200px; border-radius: 5px; border: 2px solid gray; text-align: center; margin-bottom: 30px; padding-top: 70px; ">
-                        <h1>No image</h1>
+                        <h1>{% trans %}Brak zdjęcia{% endtrans %}</h1>
                     </div>
                 {% endif %}
             </div>
         </div>
         <a href="{{ path('show_posts') }}">
-            <div class="btn btn-lg btn-primary mt-3 mb-4" href="/posts">Back</div>
+            <div class="btn btn-lg btn-primary mt-3 mb-4" href="/posts">{% trans %}Wróć{% endtrans %}</div>
         </a>
     </div>
     <!-- Modal Photo -->
-    <div class="modal fade" id="exampleModal321" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="photoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
