--- a/templates/mainpage/main.html.twig
+++ b/templates/mainpage/main.html.twig
@@ -26,14 +26,14 @@
             {% block alerts %}
                 {% if message is defined %}
                     <div class="mt-3 alert alert-success alert-dismissible fade show" role="alert">
-                        {{ message }}
+                    {{ message |trans}}
                         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
                 {% elseif error is defined %}
                     <div class="mt-3 alert alert-danger alert-dismissible fade show" role="alert">
-                        {{ error }}
+                        {{ error |trans }}
                         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
