--- a/templates/users/reset.html.twig
+++ b/templates/users/reset.html.twig
@@ -1,5 +1,6 @@
-{% extends 'base.html.twig' %}
-{% block title %}Reset your password
+{% extends 'mainpage/main.html.twig' %}
+{% block title %}
+    Reset your password
 {% endblock %}
 {% block body %}
     <link rel="stylesheet" href="{{ asset('css/login.css') }}">
@@ -12,8 +13,10 @@
                         {% if message is defined %}
                             <div class="alert alert-danger">  {{ message }}</div>
                         {% endif %}
-                        <div class="row"><input type="email" class="form-control mt-4" placeholder="Your email" name="Email"></div>
-                        <div class="row"><input class="btn btn-lg btn-warning mt-4 w-100" type="submit" value="Submit"></div>
+                        <div class="row"><input type="email" class="form-control mt-4" placeholder="Your email"
+                                                name="Email"></div>
+                        <div class="row"><input class="btn btn-lg btn-warning mt-4 w-100" type="submit" value="Submit">
+                        </div>
                     </form>
                 </div>
             </div>
