--- a/templates/posts/edit_post.html.twig
+++ b/templates/posts/edit_post.html.twig
@@ -1,6 +1,6 @@
 {% extends('mainpage/main.html.twig') %}
     {% block content %}
-        <h2 class="mt-3 mb-4"><span style="cursor: default;">{% trans %}Edytuj swój post{% endtrans %}</span></h2>
+        <h1 style="margin: 15px;">{% trans %}Edytuj swój post{% endtrans %}</h1>
         <div class="form form_edit_post">
             <div class="row">
                 <div class="col-6">
