--- a/templates/mainpage/main.html.twig
+++ b/templates/mainpage/main.html.twig
@@ -26,7 +26,7 @@
             {% block alerts %}
                 {% if message is defined %}
                     <div class="mt-3 alert alert-success alert-dismissible fade show" role="alert">
-                    {{ message |trans}}
+                        {{ message |trans }}
                         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
@@ -60,15 +60,17 @@
 </div>
 {% endblock %}
 {% block javascripts %}
-    <script crossorigin="anonymous" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    <script crossorigin="anonymous"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
             src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script crossorigin="anonymous" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    <script crossorigin="anonymous"
+            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
             src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-    <script crossorigin="anonymous" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    <script crossorigin="anonymous"
+            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
             src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <script src="{{ asset('css/dist/js/adminlte.min.js') }}"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-
     <script>
         $(".button").click(function () {
             let url = $(this).attr('id');
@@ -80,6 +82,15 @@
                 }
             });
         });
+
+        function changeLanguage(clicked_id) {
+            let url = '{{ path('change_lang', {lang: 'clicked_id'}) }}';
+            url = url.replace("clicked_id", clicked_id);
+            $.ajax({
+                url: url,
+            });
+            location.reload();
+        }
     </script>
 {% endblock %}
 </body>
