--- a/templates/posts/show_posts.html.twig
+++ b/templates/posts/show_posts.html.twig
@@ -38,14 +38,14 @@
                         </td>
 
                         <td>
-                            <button onclick="get_number(this.id)" class="btn btn-outline-danger action_post"
+                            <button onclick="get_number(this.id)" class="btn btn-outline-danger"
                                     id="{{ post.id }}" data-target="#exampleModalCenterDelete" data-toggle="modal"
                                     type="button">
                                 <i class="fas fa-trash-alt"></i>
                             </button>
                         </td>
                         <td>
-                            <button onclick="get_number(this.id)" class="btn btn-outline-primary action_post"
+                            <button onclick="get_number(this.id)" class="btn btn-outline-primary"
                                     id="{{ post.id }}" data-target="#exampleModalCenterSend" data-toggle="modal"
                                     type="button">
                                 <i class="fas fa-share-alt"></i>
@@ -66,14 +66,14 @@
                                         <i class="far fa-question-circle mt-2"></i>
                                     </h1>
                                     <h2 class="mt-4 mb-3">
-                                        <bold>Are you sure?</bold>
+                                        <bold>{% trans %}Jesteś pewien{% endtrans %}?</bold>
                                     </h2>
-                                    <h5>Do you want to delete post?</h5>
+                                    <h5>{% trans %}Czy chcesz usunąć post{% endtrans %}?</h5>
                                     <a class="action" id="/post/delete/">
-                                        <button class="delete btn-lg btn-outline-danger mt-5 mr-2">Delete</button>
+                                        <button class="delete btn-lg btn-outline-danger mt-5 mr-2">{% trans %}Usuń{% endtrans %}</button>
                                     </a>
                                     <button class="btn-lg btn-outline-secondary mt-5 ml-2" data-dismiss="modal"
-                                            type="button">Cancel
+                                            type="button">{% trans %}Anuluj{% endtrans %}
                                     </button>
                                 </div>
                             </div>
@@ -90,16 +90,16 @@
                                         <i class="far fa-question-circle mt-2"></i>
                                     </h1>
                                     <h2 class="mt-4 mb-3">
-                                        <bold>Are you sure?</bold>
+                                        <bold>{% trans %}Jesteś pewien{% endtrans %}?</bold>
                                     </h2>
-                                    <h5>Do you want to send post?</h5>
+                                    <h5>{% trans %}Czy chcesz wysłać post{% endtrans %}?</h5>
                                     <a class="action" id="/post/send/">
                                         <button class="send btn-lg btn-outline-primary mt-5 mr-2" data-dismiss="modal"
-                                                type="button">Send
+                                                type="button">{% trans %}Wyślij{% endtrans %}
                                         </button>
                                     </a>
                                     <button class="btn-lg btn-outline-secondary mt-5 ml-2" data-dismiss="modal"
-                                            type="button">Cancel
+                                            type="button">{% trans %}Anuluj{% endtrans %}
                                     </button>
                                 </div>
                             </div>
