--- a/templates/quests/edit_quest.html.twig
+++ b/templates/quests/edit_quest.html.twig
@@ -1,23 +1,23 @@
 {% extends('mainpage/main.html.twig') %}
 {% block content %}
     <div class="post_show">
-        <h1 style="margin: 15px;">Edit quest</h1>
+        <h1 style="margin: 15px;">{% trans %}Edytuj zadanie{% endtrans %}</h1>
         <form class="font-weight-bold" action="{{ path('save_quest') }}" method="POST">
             <input type="hidden" name="id" value="{{ quest.Id }}">
             {% if is_granted('ROLE_ADMIN') %}
-                <div class="mt-3 mb-2">Content:</div>
+                <div class="mt-3 mb-2">{% trans %}Treść{% endtrans %}:</div>
                 <input class="form-control" type="textarea" oninput="setCustomValidity('')"
-                               oninvalid="setCustomValidity('Content must be between 3 and 200 characters.')"
-                               minlength="3" maxlength="200" name="Content" value="{{ quest.Content }}" required>
-                <div class="mt-3 mb-2">Date:</div>
+                       oninvalid="setCustomValidity('Content must be between 3 and 200 characters.')"
+                       minlength="3" maxlength="200" name="Content" value="{{ quest.Content }}" required>
+                <div class="mt-3 mb-2">{% trans %}Data{% endtrans %}:</div>
                 <input class="form-control" type="date" min="{{ minDate }}" max="{{ maxDate }}" name="EndDate"
-                    {% if questDate >= minDate %}
-                        value="{{ questDate }}"
-                    {% else %}
-                        value="{{ minDate }}"
-                    {% endif %}
-                            required>
-                <div class="mt-3 mb-2">Select user:</div>
+                        {% if questDate >= minDate %}
+                            value="{{ questDate }}"
+                        {% else %}
+                            value="{{ minDate }}"
+                        {% endif %}
+                       required>
+                <div class="mt-3 mb-2">{% trans %}Wybierz użytkownika{% endtrans %}:</div>
                 <div>
                     <select class="browser-default custom-select" name="user" required>
                         {% for user in users %}
@@ -37,9 +37,9 @@
                 <option value="80" {% if quest.Status == 80 %} selected {% endif %}>80%</option>
                 <option value="100" {% if quest.Status == 100 %} selected {% endif %}>100%</option>
             </select>
-            <input class="btn btn-warning mt-4 mr-2" type="submit" value="Submit">
+            <input class="btn btn-warning mt-4 mr-2" type="submit" value="{% trans %}Zapisz{% endtrans %}">
             <a href="{{ path('show_quest', {id: quest.id}) }}">
-                <div class="btn btn-secondary mt-4">Back</div>
+                <div class="btn btn-secondary mt-4">{% trans %}Wróć{% endtrans %}</div>
             </a>
         </form>
     </div>
