--- a/templates/users/edit_user.html.twig
+++ b/templates/users/edit_user.html.twig
@@ -1,27 +1,41 @@
 {% extends 'mainpage/main.html.twig' %}
 {% block content %}
+    <style>
+        label[for=login_form_login]{
+            display:none;
+        }
+        label[for=email_form_email]{
+            display:none;
+        }
+    </style>
     <div class="container-fluid">
-        <h1 style="margin:25px;">Edit your data</h1>
+        <h1 style="margin:25px;">{% trans %}Edytuj swoje dane{% endtrans %}</h1>
         <div class="row mt-5">
             <div class="col-sm-12 col-md-6 mb-3">
                 <div class="form form_edit_user w-95">
-                    <h2 class="mb-3">
-                        <bold>Edit Login:</bold>
+                    <h2 class="mb-5">
+                        <bold>{% trans %}Edytuj{% endtrans %} login:</bold>
                     </h2>
                     {{ form_start(loginForm) }}
                     {{ form_widget(loginForm) }}
-                    <button class="btn btn-dark mt-4">Edit login</button>
+                    {{ form_errors(loginForm) }}
+                    <button class="btn btn-dark mt-4">{% trans %}Edytuj{% endtrans %}</button>
                     {{ form_end(loginForm) }}
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 mb-3">
                 <div class="form form_edit_user w-95">
                     <h2 class="mb-3">
-                        <bold>Edit Password:</bold>
+                        <bold>{% trans %}Edytuj hasło{% endtrans %}:</bold>
                     </h2>
                     {{ form_start(passwordForm) }}
-                    {{ form_widget(passwordForm) }}
-                    <button class="btn btn-dark mt-4">Edit password</button>
+                    <div class="mt-3"><span style="cursor: default; font-weight: bold;">{% trans %}Hasło{% endtrans %}:</span></div>
+                    {{ form_widget(passwordForm.password.first) }}
+                    {{ form_errors(passwordForm.password.first) }}
+                    <div class="mt-3"><span style="cursor: default; font-weight: bold;">{% trans %}Powtórz hasło{% endtrans %}:</span></div>
+                    {{ form_widget(passwordForm.password.second) }}
+                    {{ form_errors(passwordForm.password.second) }}
+                    <button class="btn btn-dark mt-4">{% trans %}Edytuj{% endtrans %}</button>
                     {{ form_end(passwordForm) }}
                 </div>
             </div>
@@ -29,12 +43,13 @@
         <div class="row mt-3">
             <div class="col-12">
                 <div class="form form_edit_user w-95">
-                    <h2 class="mb-3">
-                        <bold>Edit Email:</bold>
+                    <h2 class="mb-5">
+                        <bold>{% trans %}Edytuj{% endtrans %} e-mail:</bold>
                     </h2>
                     {{ form_start(emailForm) }}
                     {{ form_widget(emailForm) }}
-                    <button class="btn btn-dark mt-4">Edit email</button>
+                    {{ form_errors(emailForm) }}
+                    <button class="btn btn-dark mt-4">{% trans %}Edytuj{% endtrans %}</button>
                     {{ form_end(emailForm) }}
                 </div>
             </div>
