--- a/templates/users/show_users.html.twig
+++ b/templates/users/show_users.html.twig
@@ -1,16 +1,16 @@
 {% extends 'mainpage/main.html.twig' %}
 {% block content %}
-    <h1 style="margin: 25px;">Users list</h1>
+    <h1 style="margin: 25px;">{% trans %}Lista użytkowników{% endtrans %}</h1>
     <table class="table table-striped">
         <thead>
             <tr>
                 <th scope="col">id</th>
                 <th scope="col">login</th>
                 <th scope="col">e-mail</th>
-                <th scope="col">Role</th>
-                <th scope="col">Change email</th>
-                <th scope="col">Change Role</th>
-                <th scope="col">Delete</th>
+                <th scope="col">{% trans %}Rola{% endtrans %}</th>
+                <th scope="col">{% trans %}Zmień{% endtrans %} email</th>
+                <th scope="col">{% trans %}Zmień rolę{% endtrans %}</th>
+                <th scope="col">{% trans %}Usuń{% endtrans %}</th>
             </tr>
         </thead>
         <tbody>
@@ -20,18 +20,25 @@
                     <td>{{ user.login }}</td>
                     <td>{{ user.email }}</td>
                     {% if user.roles[0] == "ROLE_ADMIN" %}
-                        <td>Admin</td>
+                        <td>{% trans %}Administrator{% endtrans %}</td>
                     {% elseif user.roles[0] == "ROLE_USER" %}
-                        <td>User</td>
+                        <td>{% trans %}Użytkownik{% endtrans %}</td>
                     {% endif %}
                     <td>
-                        <a onclick="get_number(this.id, this.getAttribute('data-email'), this.getAttribute('data-role'))" class="btn btn-warning" id="{{ user.id }}" data-email="{{ user.email }}" data-role="{{ user.roles[0] }}" data-target="#exampleModalCenterChangeEmail" data-toggle="modal">Change email</a>
+                        <a onclick="get_number(this.id, this.getAttribute('data-email'), this.getAttribute('data-role'))"
+                           class="btn btn-warning" id="{{ user.id }}" data-email="{{ user.email }}" data-role="{{ user.roles[0] }}"
+                           data-target="#exampleModalCenterChangeEmail" data-toggle="modal">{% trans %}Zmień{% endtrans %}</a>
                     </td>
                     <td>
-                        <a onclick="get_number(this.id, this.getAttribute('data-email'), this.getAttribute('data-role'))" class="btn btn-warning" id="{{ user.id }}" data-email="{{ user.email }}" data-role="{{ user.roles[0] }}" data-target="#exampleModalCenterChangeRole" data-toggle="modal">Change role</a>
+                        <a onclick="get_number(this.id, this.getAttribute('data-email'), this.getAttribute('data-role'))"
+                           class="btn btn-warning" id="{{ user.id }}" data-email="{{ user.email }}" data-role="{{ user.roles[0] }}"
+                           data-target="#exampleModalCenterChangeRole" data-toggle="modal">{% trans %}Zmień{% endtrans %}</a>
                     </td>
                     <td>
-                        <a onclick="get_number(this.id)" class="btn btn-danger" id="{{user.id}}" data-target="#exampleModalCenterDelete" data-toggle="modal">Delete</a>
+                        <button onclick="get_number(this.id)" class="btn btn-outline-danger" id="{{user.id}}" data-target="#exampleModalCenterDelete"
+                           data-toggle="modal">
+                            <i class="fas fa-trash-alt"></i>
+                        </button>
                     </td>
                 </tr>
             {% endfor %}
@@ -46,13 +53,13 @@
                         <i class="far fa-question-circle mt-2"></i>
                     </h1>
                     <h2 class="mt-4 mb-3">
-                        <bold>Are you sure?</bold>
+                        <bold>{% trans %}Jesteś pewien{% endtrans %}?</bold>
                     </h2>
-                    <h5>Do you want to delete user?</h5>
+                    <h5>{% trans %}Czy jesteś pewny, że chcesz usunąć użytkownika{% endtrans %}?</h5>
                     <a class="action" id="/post/delete/">
-                        <button class="delete_user btn-lg btn-outline-danger mt-5 mr-2">Delete</button>
+                        <button class="delete_user btn-lg btn-outline-danger mt-5 mr-2">{% trans %}Usuń{% endtrans %}</button>
                     </a>
-                    <button class="btn-lg btn-outline-secondary mt-5 ml-2" data-dismiss="modal" type="button">Cancel</button>
+                    <button class="btn-lg btn-outline-secondary mt-5 ml-2" data-dismiss="modal" type="button">{% trans %}Anuluj{% endtrans %}</button>
                 </div>
             </div>
         </div>
@@ -63,11 +70,11 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-body text-center">
-                    <h2>Change email</h2>
+                    <h2>{% trans %}Zmiana e-maila{% endtrans %}</h2>
                     <form class="emailForm" method="Post" action="">
                         <input type="email" name="email" maxlength="50" class="form-control mt-3" id="exampleInputEmail" aria-describedby="emailHelp" required>
                     </div>
-                    <button style="width:95%; margin:auto;" class="mt-3 mb-3 btn-lg btn-warning" type="submit">Save</button>
+                    <button style="width:95%; margin:auto;" class="mt-3 mb-3 btn-lg btn-warning" type="submit">{% trans %}Zapisz zmianę{% endtrans %}</button>
                 </form>
             </div>
         </div>
@@ -82,11 +89,11 @@
                 <h2>Change role</h2>
                 <form class="editRole" method="Post" action="">
                     <select class="role_input browser-default custom-select" name="roles" required>
-                        <option value="ROLE_ADMIN" selected="">Admin</option>
-                        <option value="ROLE_USER">User</option>
+                        <option value="ROLE_ADMIN" selected="">{% trans %}Administrator{% endtrans %}</option>
+                        <option value="ROLE_USER">{% trans %}Użytkownik{% endtrans %}</option>
                     </select>
                 </div>
-                <button style="width:95%; margin:auto;" class="mt-3 mb-3 btn-lg btn-warning" type="submit">Save</button>
+                <button style="width:95%; margin:auto;" class="mt-3 mb-3 btn-lg btn-warning" type="submit">{% trans %}Zapisz zmianę{% endtrans %}</button>
             </form>
         </div>
     </div>
