--- a/templates/quests/show_quests.html.twig
+++ b/templates/quests/show_quests.html.twig
@@ -18,7 +18,7 @@
         <tbody>
         {% if quests is empty %}
             <tr>
-                <td><h4>No quests to show</h4></td>
+                <td><h4>{% trans %}Brak zadań do wyświetlenia{% endtrans %}</h4></td>
                 <td></td>
                 <td></td>
                 <td></td>
