--- a/templates/posts/show_post.html.twig
+++ b/templates/posts/show_post.html.twig
@@ -32,7 +32,7 @@
             </div>
         </div>
         <a href="{{ path('show_posts') }}">
-            <div class="btn btn-lg btn-primary mt-3 mb-4" href="/posts">{% trans %}Wróć{% endtrans %}</div>
+            <div class="btn btn-lg btn-primary mt-3 mb-4" href="/user/posts">{% trans %}Wróć{% endtrans %}</div>
         </a>
     </div>
     <!-- Modal Photo -->
