--- a/templates/posts/new_post.html.twig
+++ b/templates/posts/new_post.html.twig
@@ -12,11 +12,9 @@
         <div class="mt-3"><span style="cursor: default; font-weight: bold;">{% trans %}Wybierz zdjęcie{% endtrans %}:</span></div>
         {{ form_widget(form.name) }}
         {{ form_errors(form.name) }}
-        <div class="chosenImage">
-            <img id="chosenImage" style="height: 30vh; max-width: 100%; margin-top: 20px; margin-bottom: 10px;">
-        </div>
+        <div class="photoSelection"></div>
         <div>
-            <button class="btn btn-dark mt-2">{% trans %}Dodaj post{% endtrans %}</button>
+            <button class="confirmButton btn btn-dark mt-5">{% trans %}Dodaj post{% endtrans %}</button>
         </div>
         {{ form_end(form) }}
     </div>
@@ -28,10 +26,15 @@
             var chosenImage = new FileReader();
             chosenImage.onload = function()
             {
+                document.querySelector(".photoSelection").insertAdjacentHTML('beforeend', "<div class=\"chosenImage\">\n" +
+                    "<img id=\"chosenImage\" style=\"height: 30vh; max-width: 100%; margin-top: 20px; margin-bottom: 10px;\">\n" +
+                    "</div>");
                 var image = document.querySelector("#chosenImage");
                 image.src = chosenImage.result;
                 image.style.borderRadius = "5px";
                 image.style.border = "2px solid gray";
+                var button = document.querySelector(".confirmButton");
+                button.className = "confirmButton btn btn-dark mt-2";
             }
             chosenImage.readAsDataURL(event.target.files[0]);
         }
