--- a/templates/posts/show_post.html.twig
+++ b/templates/posts/show_post.html.twig
@@ -21,7 +21,7 @@
                     <div class="show_image" data-toggle="modal" data-target="#photoModal">
                         <img class="mt-3"
                              style="max-width: 100%; border-radius: 5px; border: 2px solid gray; margin-bottom: 30px;"
-                             src="{{ asset('uploads/photos/') }}{{ photoPath }}">
+                             src="{{ photoPath }}">
                         <i class="fas fa-search-plus zoom"></i>
                     </div>
                 {% else %}
@@ -31,8 +31,8 @@
                 {% endif %}
             </div>
         </div>
-        <a href="{{ path('show_posts') }}">
-            <div class="btn btn-lg btn-primary mt-3 mb-4" href="/user/posts">{% trans %}Wróć{% endtrans %}</div>
+        <a href="{{ path('show_user_posts') }}">
+            <div class="btn btn-lg btn-primary mt-3 mb-4">{% trans %}Wróć{% endtrans %}</div>
         </a>
     </div>
     <!-- Modal Photo -->
@@ -47,7 +47,7 @@
                 </div>
                 <div class="modal-body">
                     {% if photoPath is defined %}
-                            <img class="mt-3" style="max-height: 650px; width: 100%; " src="{{ asset('uploads/photos/') }}{{ photoPath }}">
+                            <img class="mt-3" style="max-height: 650px; width: 100%; " src="{{ photoPath }}">
                     {% endif %}
                 </div>
             </div>
